# LAGO_data_model

./: Dockerfile  Makefile  README.md  enviroment.yml  pyproject.toml  requiermments.txt
lago_data_model/: reader.py  utils.py
notebooks/: Untitled.ipynb  clean_raw_data.ipynb  eda.ipynb  load_parquet_data.ipynb  read_data.ipynb  transform_data.ipynb
scripts/: run_data_reader.py  run_data_reader.sh
