[project]
name = "lago-data-model"
version = "0.1.0"
description = ""
authors = [
    {name = "Erick Diaz",email = "ewdiazsa@gmail.com"}
]
package-mode = false
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "seaborn>=0.12.2",
    "jupyterlab>=4.0.0",
    "tqdm (>=4.67.1,<5.0.0)",
    "pyarrow (>=21.0.0,<22.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
